--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bundle-buddy-webpack-plugin": "^0.3.0",
     "clean-webpack-plugin": "^0.1.18",
@@ -55,6 +56,7 @@
     "url-loader": "^0.6.2",
     "webpack": "^3.11.0",
     "webpack-bundle-analyzer": "^2.10.0",
+    "webpack-cliwebpack": "^3.0.8",
     "webpack-dashboard": "^1.1.1",
     "webpack-dev-server": "^2.11.1",
     "webpack-merge": "^4.1.1"
