--- a/.eslintrc
+++ b/.eslintrc
@@ -18,15 +18,37 @@
         "react"
     ],
     "rules": {
-        "no-console": "off",        
-        "indent": ["error", 4, { "SwitchCase": 1 }],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ]
+        "no-console": 0,        
+        "no-debugger": 1,
+        "no-var": 1,
+        "indent": [2, 4, { "SwitchCase": 1 }],
+        "quotes": [2,"single"],
+        "semi": [1,"always"],
+        "no-unused-vars": 1,
+        "react/jsx-closing-bracket-location": 0,
+        "react/jsx-curly-spacing": 1,
+        "react/jsx-indent-props": 0,
+        "react/jsx-key": 1,
+        "react/jsx-max-props-per-line": 0,
+        "react/jsx-no-bind": 0,
+        "react/jsx-no-duplicate-props": 1,
+        "react/jsx-no-literals": 0,
+        "react/jsx-no-undef": 1,
+        "react/jsx-pascal-case": 1,
+        "react/jsx-sort-prop-types": 0,
+        "react/jsx-sort-props": 0,
+        "react/jsx-uses-react": 1,
+        "react/jsx-uses-vars": 1,
+        "react/jsx-wrap-multilines": 1,
+        "react/no-danger": 1,
+        "react/no-direct-mutation-state": 2,
+        "react/no-multi-comp": [1, { "ignoreStateless": true }],
+        "react/no-set-state": 2,
+        "react/no-unknown-property": 1,
+        "react/prefer-es6-class": 1,
+        "react/prop-types": 1,
+        "react/react-in-jsx-scope": 1,
+        "react/self-closing-comp": 1,
+        "react/sort-comp": 1
     }
 }
