--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "type": "git",
     "url": "git+https://github.com/drminnaar/react-redux-starter.git"
   },
-  "license": "MIT",
+  "license": "Panviva",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
